[project]
name = "tinybid"
version = "0.3.0"
description = """\
    Minimal pure-Python library that implements a basic single-item \
    first-price auction via a secure multi-party computation (MPC) \
    protocol.\
    """
license = {text = "MIT"}
authors = [
    {name = "Nillion"},
    {email = "engineering@nillion.com"}
]
readme = "README.rst"
requires-python = ">=3.7"
dependencies = [
    "bitlist~=1.2",
    "modulo~=2.1",
    "tinynmc~=0.2"
]

[project.urls]
Repository = "https://github.com/nillionnetwork/tinybid"
Documentation = "https://tinybid.readthedocs.io"

[project.optional-dependencies]
docs = [
    "toml~=0.10.2",
    "sphinx~=5.0",
    "sphinx-rtd-theme~=1.1.0",
    "sphinx-autodoc-typehints~=1.12.0"
]
test = [
    "pytest~=7.2",
    "pytest-cov~=4.0"
]
lint = [
    "pylint~=2.17.0"
]
coveralls = [
    "coveralls~=3.3.1"
]
publish = [
    "build~=0.10",
    "twine~=4.0"
]

[build-system]
requires = [
    "setuptools>=68.0"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=docs --cov=tinybid --cov-report term-missing"
